# calendario

./: .gitignore  LICENSE  README.md  ejemplo-eventos.json  pyproject.toml
.github/workflows/: ci.yml
calendario/: fechas.py  main.py  pdf.py
tests/: test_fechas.py  test_main.py
